LightBDD
===========================================

Version [next]
----------------------------------------
+ #260 (LightBDD.MsTest2)(Change) Updated MSTest.TestFramework to 2.2.10
+ #260 (LightBDD.NUnit3)(Change) Updated NUnit dependency to 3.13.3
+ #260 (LightBDD.Fixie2)(Change) Dropped netcoreapp2.0 support
+ #260 (Examples) Removed Example.LightBDD.MsTest2.UWP project as UWP is deprecated
+ #225 (Core)(New) Introduced IProgressNotifier and processing events: FeatureStarting, FeatureFinished, ScenarioStarting, ScenarioFinished, StepStarting, StepFinished, StepCommented
+ #225 (Core)(New) Extended ScenarioExecutionContext with GetCurrentScenarioFixtureIfPresent to return fixture object executing given scenario
+ #225 (Framework)(New) Introduced ProgressNotifierConfiguration to configure IProgressNotifier instances and updated DefaultProgressNotifier, NoProgressNotifier to implement IProgressNotifier and added ParallelProgressNotifierProvider.CreateProgressNotifier() method
+ #225 (LightBDD.XUnit2/LightBDD.NUnit3/LightBDD.MsTest2/LightBDD.Fixie2)(Change) Updated projects to use IProgressNotifier configuration
+ #225 (Core/Framework)(Change) Obsoleted IScenarioProgressNotifier, IFeatureProgressNotifier, DelegatingScenarioProgressNotifier, DelegatingFeatureProgressNotifier and all methods using them

Version 3.4.2
----------------------------------------
+ #257 (Core)(Bug) Added reset of step and scenario results upon retry in decorator

Version 3.4.1
----------------------------------------
+ #248 (Framework)(Change) Improved MessageListener.EnsureReceived() to return friendly message dumps for common types
+ #252 (LightBdd.XUnit2)(Change) Added LightBddScopeAttribute.DiagnosticMessageSink property

Version 3.4.0 (VSIX)
----------------------------------------
+ #250 (VSIX) Updated LightBDD Visual Studio Extension to support VS2022

Version 3.4.0
----------------------------------------