@@ -1,0 +1,33 @@
+﻿using System;
+using System.Threading.Tasks;
+using LightBDD.Core.Execution;
+using LightBDD.Core.Extensibility.Execution;
+using OpenQA.Selenium;
+
+namespace LightBDD.AcceptanceTests.Helpers
+{
+    internal class ScreenshotCaptureOnFailure : IStepDecorator
+    {
+        public async Task ExecuteAsync(IStep step, Func<Task> stepInvocation)
+        {
+            try
+            {
+                await stepInvocation();
+            }
+            catch (Exception)
+            {
+                if (step.Context is IChromeDriverContext context)
+                    await TakeScreenshot(step, context);
+                throw;
+            }
+
+        }
+
+        private static async Task TakeScreenshot(IStep step, IChromeDriverContext context)
+        {
+            var screenShotPath = $"{Guid.NewGuid()}.png";
+            context.Driver.GetScreenshot().SaveAsFile(screenShotPath, ScreenshotImageFormat.Png);
+            await step.AttachFile(mgr => mgr.CreateFromFile("screenshot", screenShotPath));
+        }
+    }
+}
